SystemUI/Added ADB over network QuickSettings Tile
Change-Id: I340846a171571a7b61d2c68f2a6875794be5d5b2
Signed-off-by: Josue Rivera <prbassplayer@gmail.com>

--- a/packages/SystemUI/res/values/liquid_strings.xml
+++ b/packages/SystemUI/res/values/liquid_strings.xml
@@ -148,6 +148,9 @@
     <string name="quick_settings_compass_off">Compass off</string>
     <string name="quick_settings_compass_init">Initializing\u2026</string>
     <string name="quick_settings_compass_value" translatable="false"><xliff:g id="degrees">%1$.0f</xliff:g>\u00b0 <xliff:g id="direction">%2$s</xliff:g></string>
+    <string name="quick_settings_hover">Hover</string>
+    <string name="quick_settings_network_adb_disabled_label">Disabled</string>
+    <string name="quick_settings_network_adb_enabled_label">Enabled</string>
 
     <!-- Network Strings for battery saver mode -->
     <string name="network_4G">4G/LTE</string>
@@ -178,7 +181,6 @@
     <string name="battery_saver_airplane_ticker">Airplane mode enabled by battery saver</string>
     <string name="battery_saver_airplane_text">Airplane mode enabled by battery saver because there is no signal after 5 minutes</string>
     <string name="battery_saver_disable">Disable</string>
-    <string name="quick_settings_hover">Hover</string>
 
     <!-- Battery status in pie controls -->
     <string name="pie_battery_status_charging">Charging (<xliff:g id="percent">%d</xliff:g>%%)</string>
